--- a/Predict Customer Churn.ipynb
+++ b/Predict Customer Churn.ipynb
@@ -3341,7 +3341,10 @@
     "# Combine Parameters\n",
     "parameters = dict(C=C, penalty=penalty)\n",
     "\n",
-    "lr_classifier = GridSearchCV(estimator = classifier,\n",
+    "# Use liblinear solver which supports both l1 and l2 penalties\n",
+    "# Increase max_iter to ensure convergence\n",
+    "classifier_tuned = LogisticRegression(random_state=0, solver='liblinear', max_iter=1000)\n",
+    "lr_classifier = GridSearchCV(estimator = classifier_tuned,\n",
     "                           param_grid = parameters,\n",
     "                           scoring = \"balanced_accuracy\",\n",
     "                           cv = 10,\n",
